Fixes account summaries alignment for responsive.

--- a/myuw/static/css/boilerplate.less
+++ b/myuw/static/css/boilerplate.less
@@ -426,9 +426,9 @@ body { padding: 0; margin: 0; font-family: "Open Sans",Helvetica,Arial,Verdana,s
 }
 
 /*** account summaries ***/
-.myuw-account-summaries {
+.myuw-account-summaries { text-align: center;
 
-    a { display: inline-block; text-align: center; font-size: 12px; color: #666; min-width:80px;
+    a { display: inline-block; text-align: center; font-size: 12px; color: #666; min-width:100px;
 
         &:hover, &:focus { text-decoration: none; color: #666; }
 
@@ -442,7 +442,7 @@ body { padding: 0; margin: 0; font-family: "Open Sans",Helvetica,Arial,Verdana,s
 
     }
 
-    span { display: block; font-weight: bold; font-size: 16px;
+    span { display: block; font-weight: bold; font-size: 16px; color: #333;
         &:hover, &:focus { text-decoration: underline; }
     }
 }
